--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ APP_KEY=
 APP_DEBUG=false
 APP_URL=http://localhost
 
+APP_LOCALE=id
+APP_FAKER_LOCALE=id_ID
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
