--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,19 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "spatie/laravel-activitylog": "^4.6"
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "2.0",
+        "spatie/laravel-activitylog": "^4.6",
+        "yajra/laravel-datatables": "^9.0",
+        "yoeunes/toastr": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
