--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "2.0",
+        "renatomarinho/laravel-page-speed": "^2.1",
         "spatie/laravel-activitylog": "^4.6",
+        "spatie/laravel-permission": "^5.5",
+        "spatie/laravel-translation-loader": "^2.7",
         "yajra/laravel-datatables": "^9.0",
         "yoeunes/toastr": "^2.0"
     },
