--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,11 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/DateFormatter.php",
+            "app/Helpers/NullToEmptyString.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
